--- a/src/components/Advantages/Advantages.scss
+++ b/src/components/Advantages/Advantages.scss
@@ -3,31 +3,21 @@
 
 
 .advantages {
-    margin-top: 305px;
-    
+    margin-top: 305px;   
     &__inner {
         display: flex;
         flex-direction: column;
         align-items: center;   
     }
-    
-    &__title {
-        color: $accentColor;
-        text-align: center;
-    }
-
     &__items {
-        margin-top: 130px;
+        margin-top: 100px;
         display: flex;
         justify-content: space-between;  
     }
-
     &__item {
         width: 23%;
-        padding-top: 10px;
         padding-left: 10px;
         padding-right: 10px;
-        padding-bottom: 10px; 
         display: flex;
         flex-direction: column;
     }
@@ -41,19 +31,17 @@
     }
     .item__img {
         height: 217px;
-        margin: 0 auto;
-        padding-top: 45px;
+        /* margin: 0 auto; */
+        padding-top: 40px;
         padding-left: 20px;
         padding-right: 20px;
-        padding-bottom: 20px;
-        
+        padding-bottom: 20px;       
         img {
             width: 100%;
             height: 100%;
             overflow: hidden;
             }   
         }
-
     .item__wrapper {
         margin-bottom: 10px;
     }
@@ -63,7 +51,6 @@
         font-weight: 700;
         text-align: center;
         }
-
     .item__text {
         margin-top: 10px;
         font-size: 14px;
@@ -83,27 +70,20 @@
 
 @media (max-width: 1137px){
     .advantages {       
-    &__items {
-        margin-top: 80px;
-    }
-
     &__btn{ 
         margin-top: 60px; 
     }
-
     .item__img {  
         height: 130px;
-        padding-top: 20px;
+        padding-top: 15px;
         padding-left: 10px;
         padding-right: 10px;
         padding-bottom: 10px;
     }
-
     .item__title {
         padding-top: 20px;
         font-size: 18px;
         }
-
     .item__text {
         min-height: 45px;
         font-size: 13px;
@@ -126,37 +106,32 @@
     .advantages { 
         margin-top: 300px;
         &__items {
-            margin-top: 110px;
+            margin-top: 105px;
         } 
-        &__item{
+        &__item {
             width: 25%;
             padding-left: 5px;
             padding-right: 5px;
         }
     }
-
 }
 
 @media(max-width: 822px) {
     .advantages {
-        &__title {
-            font-size: 32px;
-        }
         &__items {
             flex-wrap: wrap;
             justify-content: center;
+            row-gap: 40px;
         }
         &__item {
             width: 50%; 
             min-height: 230px;
             align-items: center;
         }  
-
         .item__title {
             font-size: 16px;
             line-height: 20px;
             }
-
         .item__text {
             min-height: 40px;
             max-width: 195px;
@@ -168,60 +143,54 @@
 
 @media (max-width: $mobile){
     .advantages {
-        margin-top: 160px;
-        
-    &__title {
-        font-size: 18px;
-        margin: 0 auto;
-    }
-    
-    &__items {
-        margin-top: 20px;
-        flex-wrap: nowrap;
-        flex-direction: column;
-        align-items: center;
-        row-gap: 10px;  
-    }
-    &__item {
-        width: 100%;
-        min-height: 80px;
-        flex-direction: row;
-        padding: 0;
-        column-gap: 7%;
-        align-items: flex-start;
-    } 
-
-    &__btn {
-        margin-top: 40px;
-        text-align: center; 
-    }
-    .item__img {
-        width: 22%;
-        height: 70px;
-        padding-top: 10px;
-        padding-left: 5px;
-        padding-right: 5px;
-        padding-bottom: 5px;
-    }
-    .item__wrapper {
-        padding-top: 15px;
-        padding-bottom: 0;
-        margin-bottom: 0;
-        width: 75%;
-    }
-
-    .item__title {
-        padding-top: 0;
-        margin-top: 0;
-        font-size: 16px;
-        text-align: left;
+        margin-top: 160px;   
+        &__items {
+            width: 100%;
+            margin-top: 20px;
+            flex-wrap: nowrap;
+            flex-direction: column;
+            align-items: center;
+            row-gap: 0;
         }
-    .item__text {
-        margin: 0;
-        padding-top: 0;
-        font-size: 11px;
-        line-height: 13px;
-        text-align: left; 
+        &__item {
+            width: 100%;
+            min-height: 80px;
+            flex-direction: row;
+            padding: 0;
+            justify-content: space-between;
+            align-items: flex-start;
+        } 
+        &__btn {
+            margin-top: 40px;
+            text-align: center; 
+        }
+        .item__img {
+            width: 20%;
+            height: 70px;
+            padding-top: 10px;
+            padding-bottom: 5px; 
+            padding-left: 0;
+            padding-right: 0;
+        }
+        .item__wrapper {
+            width: 70%;
+            padding-top: 15px;
+            padding-bottom: 0;
+            margin-bottom: 0;
+        }
+        .item__title {
+            padding-top: 0;
+            margin-top: 0;
+            font-size: 16px;
+            text-align: left;
+        }
+        .item__text {
+            margin: 0;
+            padding-top: 0;
+            max-width: none;
+            font-size: 11px;
+            line-height: 13px;
+            text-align: left; 
         }   
     } 
 }
