--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -4,6 +4,8 @@
 @mixin before_circle-pressed {
     &:before {
         display: block;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
         box-sizing: border-box;
         content: "";
         position: absolute;
@@ -21,6 +23,8 @@
 @mixin before_circle {
     &::before {
         display: block;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
         box-sizing: border-box;
         content: "";
         position: absolute;
@@ -35,6 +39,8 @@
 }
 @mixin divider {
     &::after{
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
         box-sizing: border-box;
         content: "";
         position: absolute;
@@ -48,6 +54,8 @@
 }
 @mixin before_circleList {
     &::before {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
         display: block;
         box-sizing: border-box;
         content: "";
