--- a/src/pages/CookiesPolicyPage/CookiesPolicyPage.scss
+++ b/src/pages/CookiesPolicyPage/CookiesPolicyPage.scss
@@ -80,7 +80,7 @@
     }
     &__item {
         display: flex;
-        align-items: end;
+        align-items: flex-end;
         width: 100%;
         min-height: 75px;
         padding-bottom: 12px;
