--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: space-between;
     padding-top: 40px;
-    border-top: solid 1px $textColor;
+    width: 100%;
     gap: 10px;
     font-size: 16px;
     line-height: 2;
