--- a/src/components/BecomeMember/BecomeMember.scss
+++ b/src/components/BecomeMember/BecomeMember.scss
@@ -71,7 +71,6 @@
     .member{
         margin-top: 140px;
         margin-bottom: 66px;
-
         &__title {
             margin-top: 40px;
             line-height: 38px;
@@ -110,15 +109,23 @@
         }
     }
 }
+@media (max-width: 739px){
+    .member {
+        &__subTitle {
+            font-size: 19px;
+            line-height: 25px;  
+            } 
+    }
+}
 @media (max-width: $smallTablet) {
     .member {
     &__title {
-            font-size: 22px;
-            line-height: 32px;
+            font-size: 16px;
+            line-height: 20px;
         }
     &__subTitle {
-        font-size: 12px;
-        line-height: 16px;  
+        font-size: 10px;
+        line-height: 13px;  
         } 
     &__steps {
         width: 300px; 
