--- a/src/components/FirstScreen/FirstScreen.scss
+++ b/src/components/FirstScreen/FirstScreen.scss
@@ -35,6 +35,7 @@
 }
 @media(min-width: $ultra) {
     .firstScreen {
+        margin-top: 477px;
         &__title {
             font-size: 95px;
             line-height: 122px;
