--- a/src/components/Advantages/Advantages.scss
+++ b/src/components/Advantages/Advantages.scss
@@ -13,34 +13,21 @@
     &__items {
         margin-top: 100px;
         display: flex;
-        justify-content: space-between;  
+        column-gap: 2%;
     }
     &__item {
-        width: 23%;
-        padding-left: 10px;
-        padding-right: 10px;
+        width: calc(100%/4 - 2% * 3/4);
         display: flex;
         flex-direction: column;
-    }
-    
-    &__btn {
-        margin: 0 auto;
-        margin-top: 70px; 
-        .btn {
-            display: block;  
-        }
+        align-items: center;
     }
     .item__img {
-        height: 217px;
-        /* margin: 0 auto; */
-        padding-top: 40px;
-        padding-left: 20px;
-        padding-right: 20px;
-        padding-bottom: 20px;       
-        img {
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
+        height: 245px;
+            img {
+                display: block;
+                width: 100%;
+                height: 80%;
+                overflow: hidden;
             }   
     }
     .item__wrapper {
@@ -51,16 +38,22 @@
         line-height: 30px;
         font-weight: 700;
         text-align: center;
-        }
+    }
     .item__text {
         margin-top: 10px;
         font-size: 14px;
         line-height: 18px;
         text-align: center;
-        min-height: 50px;
-        }    
+    }         
+    &__btn {
+        margin: 0 auto;
+        margin-top: 70px; 
+            .btn {
+                display: block;  
+            }
+    }
 }
-@media(min-width: $ultra) {
+@media(min-width: 1804px) {
     .advantages {
         margin-top: 549px;
         &__items {
@@ -70,7 +63,10 @@
             margin-top: 130px; 
         }
         .item__img {
-            height: 365px; 
+            height: 361px;
+        }
+        .item__wrapper {
+            min-height: 96px;
         }
         .item__title {
             font-size: 37px;
@@ -79,87 +75,75 @@
         .item__text {
             margin-top: 20px;
             font-size: 23px;
-            line-height: 29px;
+            line-height: 33px;
             }   
     }
 }
-@media (max-width: 1344px){
-    .advantages {   
-    .item__title {
-        font-size: 20px;
-        line-height: 28px;
+@media (max-width: $ultra) {
+    .advantages {
+        .advantages {
+            .item__title {
+                font-size: 30px;
+            }
+            .item__text {
+                font-size: 21px;
+            } 
         }
     }
-}
-
-@media (max-width: 1137px){
-    .advantages {       
-    &__btn{ 
-        margin-top: 60px; 
-    }
-    .item__img {  
-        height: 130px;
-        padding-top: 15px;
-        padding-left: 10px;
-        padding-right: 10px;
-        padding-bottom: 10px;
-    }
-    .item__title {
-        padding-top: 20px;
-        font-size: 18px;
+} 
+@media (max-width: 1160px) {
+    .advantages {
+        &__items {       
+        column-gap: 1%;
         }
-    .item__text {
-        min-height: 45px;
-        font-size: 13px;
-        }   
-    } 
-}
-@media (max-width: 1055px){
-    .advantages {   
-    .item__title {
-        font-size: 16px;
-        line-height: 20px;
+        &__item {
+            width: calc(100%/4 - 1% * 3/4);
         }
-    .item__text {
-            font-size: 12px;
-            line-height: 16px;
-        } 
-    }   
+        .item__title {
+            font-size: 19px;
+        }
+    }
 }
 @media (max-width: $tablet)  {
     .advantages { 
         margin-top: 300px;
         &__items {
-            margin-top: 105px;
-        } 
-        &__item {
-            width: 25%;
-            padding-left: 5px;
-            padding-right: 5px;
+            margin-top: 110px;
         }
+        .item__img {
+            height: 120px;
+        }
+        .item__title {
+            font-size: 16px;
+            line-height: 20px;
+        }
+        .item__text {
+                font-size: 12px;
+                line-height: 16px;
+        } 
     }
 }
 
-@media(max-width: 822px) {
+@media(max-width: 830px) {
     .advantages {
         &__items {
             flex-wrap: wrap;
             justify-content: center;
-            row-gap: 40px;
+            gap: 40px;
         }
         &__item {
-            width: 50%; 
+            width: calc(100%/2 - 40px * 1/2);
             min-height: 230px;
             align-items: center;
         }  
         .item__title {
-            font-size: 16px;
+            font-size: 15px;
             line-height: 20px;
             }
         .item__text {
             min-height: 40px;
-            max-width: 195px;
-            font-size: 12px;
+            max-width: 180px;
+            font-size: 11px;
             line-height: 16px;
         } 
     }
@@ -177,41 +161,36 @@
             row-gap: 0;
         }
         &__item {
-            width: 100%;
+            width: 95%;
             min-height: 80px;
             flex-direction: row;
-            padding: 0;
-            justify-content: space-between;
             align-items: flex-start;
+            column-gap: 8%;
+            margin-top: 10px;
+            &:first-child {
+                margin-top: 0;
+            }
         } 
         &__btn {
             margin-top: 40px;
             text-align: center; 
         }
         .item__img {
-            width: 20%;
-            height: 70px;
-            padding-top: 10px;
-            padding-bottom: 5px; 
-            padding-left: 0;
-            padding-right: 0;
+            width: 24%;          
+            max-height: 70px;
+                img {
+                    height: 100%;
+                }  
         }
         .item__wrapper {
-            width: 70%;
-            padding-top: 15px;
-            padding-bottom: 0;
-            margin-bottom: 0;
+            width: 68%;
         }
         .item__title {
-            padding-top: 0;
-            margin-top: 0;
             font-size: 16px;
             text-align: left;
         }
         .item__text {
-            margin: 0;
-            padding-top: 0;
-            max-width: none;
+            margin-top: 5px;
             font-size: 11px;
             line-height: 13px;
             text-align: left; 
