--- a/src/pages/AboutProjectPage/AboutProjectPage.scss
+++ b/src/pages/AboutProjectPage/AboutProjectPage.scss
@@ -1,15 +1,11 @@
 @import "../../styles/vars";
 
 .about {
-    margin-top: 127px;
+    margin-top: 115px;
     margin-bottom: 115px;
 
     &__title {
-        text-align: center;
-        margin-bottom: 90px;
-    }
-    &__content {
-        padding: 85px 80px 88px 80px;
+        margin-bottom: 70px;
     }
     &__subtitle {
         font-size: 32px;
@@ -23,24 +19,36 @@
         margin-bottom: 60px;
     }
 }
+@media (min-width: $ultra) {
+    .about {
+        margin-top: 170px;
+        font-size: 30px;
+        &__title {
+            margin-bottom: 150px;
+        }
+        &__subtitle {
+            font-size: 48px;
+            line-height: 53px;
+            margin-bottom: 50px;
+        }
+        &__text {
+            font-size: 30px;
+            line-height: 33px;
+            margin-bottom: 100px;
+        }
+    }
+}
 
 @media (max-width: $tablet)  {
     .about {
-        margin-top: 45px;
-        margin-bottom: 40px;
-        
+        margin-top: 75px;
+        margin-bottom: 40px;      
         &__title {
             margin-bottom: 45px;
         }
-    
-        &__content {
-            padding: 60px 35px 74px 35px;
-        }
-        
         &__subtitle {
             margin-bottom: 10px;
-        }
-        
+        }       
         &__text {
             font-size: 15px;
             line-height: 15px;
@@ -49,26 +57,18 @@
     }
 }
 
-
 @media (max-width: $mobile)  {
     .about {
         margin-top: 45px;
         margin-bottom: 60px;
-
         &__title {
-            margin-bottom: 20px;
+            margin-bottom: 40px;
         }
-    
-        &__content {
-            padding: 25px 7px 25px 7px;
-        }
-        
         &__subtitle {
             font-size: 14px;
             line-height: 18px;
             margin-bottom: 5px;
-        }
-        
+        }    
         &__text {
             font-size: 8px;
             margin-bottom: 15px;
