--- a/src/pages/Agreement/Agreement.scss
+++ b/src/pages/Agreement/Agreement.scss
@@ -1,16 +1,14 @@
 @import "../../styles/vars";
 
 .agreement {
-    margin-top: 69px;
+    margin-top: 115px;
     margin-bottom: 50px;
     font-size: 22px;
 
     &__title {
-        margin-bottom: 15px;
-        font-size: 64px;
-    }
-    &__content {
-        padding: 60px 60px 70px 60px;
+        max-width: 950px;
+        margin: 0 auto;
+        margin-bottom: 70px;
     }
     &__list-title {
         margin-bottom: 40px;
@@ -21,11 +19,32 @@
     }
     &__list-item {
         margin-bottom: 40px
-    }
-    
+    }    
     &__text {
         margin-bottom: 40px;
         address {display: inline;}
+    }
+}
+@media (min-width: $ultra) {
+    .agreement {
+        margin-top: 170px;
+        font-size: 30px;
+        &__title {
+            margin: 0 auto;
+            margin-bottom: 150px;
+        }
+        &__list-title {
+            margin-bottom: 50px;
+        }
+        &__list {
+            margin-bottom: 50px;
+        }
+        &__list-item {
+            margin-bottom: 50px
+        }    
+        &__text {
+            margin-bottom: 50px;
+        }
     }
 }
 
@@ -33,17 +52,10 @@
     .agreement {
         font-size: 15px;
         margin-top: 75px;
-        margin-bottom: 70px;
-        
+        margin-bottom: 70px;      
         &__title {
-            margin-bottom: 25px;
-            font-size: 36px;
-        }
-
-        &__content {
-            padding: 45px 35px 45px 35px;
-        }
-        
+            margin-bottom: 45px;
+        }      
         &__list-title {
             margin-bottom: 30px;
         }
@@ -55,7 +67,6 @@
         }
         &__text {
             margin-bottom: 30px;
-            
         }
         
     }
@@ -65,18 +76,14 @@
 @media (max-width: $mobile)  {
     .agreement {
         font-size: 8px;
-        margin-top: 32px;
+        margin-top: 45px;
         margin-bottom: 20px;
-
         &__title {
-            margin-bottom: 15px;
-            font-size: 16px;
-        }
-    
+            margin-bottom: 40px;
+        }   
         &__content {
             padding: 20px 8px 20px 8px;
-        }
-        
+        }      
         &__list-title {
             margin-bottom: 20px;
         }
