--- a/src/pages/GeneralTermsPage/GeneralTermsPage.scss
+++ b/src/pages/GeneralTermsPage/GeneralTermsPage.scss
@@ -6,13 +6,9 @@
 }
 
 .terms__title {
-    text-align: center;
     margin-bottom: 90px;
 }
 
-.terms__content {
-    padding: 85px 80px 48px 80px;
-}
 
 .terms__subtitle {
     font-size: 32px;
@@ -25,6 +21,24 @@
     margin-bottom: 40px;
 }
 
+@media (min-width: $ultra) {
+    .terms {
+        margin-top: 170px;
+        font-size: 30px;
+        &__title {
+            margin-bottom: 150px;
+        }
+        .terms__subtitle {
+            font-size: 48px;
+            margin-bottom: 50px;
+        }
+        
+        .terms__text {
+            font-size: 30px;
+            margin-bottom: 100px;
+        }
+    }
+}
 @media (max-width: $tablet)  {
     .terms {
         margin-top: 75px;
@@ -33,10 +47,6 @@
 
     .terms__title {
         margin-bottom: 45px;
-    }
-
-    .terms__content {
-        padding: 60px 35px 44px 35px;
     }
     
     .terms__subtitle {
@@ -58,12 +68,9 @@
     }
 
     .terms__title {
-        margin-bottom: 20px;
+        margin-bottom: 40px;
     }
 
-    .terms__content {
-        padding: 25px 11px 9px 11px;
-    }
     
     .terms__subtitle {
         font-size: 14px;
