--- a/src/components/WhyRecyclexBlock/WhyRecyclexBlock.scss
+++ b/src/components/WhyRecyclexBlock/WhyRecyclexBlock.scss
@@ -62,6 +62,50 @@
         }
     }
 }
+@media(min-width: $ultra) {
+    .whyRecyclex {
+        margin-top: 300px;
+        &__inner {
+            margin-top: 150px;
+        }
+        &__items {
+            width: 55%; 
+        }
+
+        &__item {
+            padding-top: 30px;
+            padding-bottom: 50px;
+        }
+        &__subTitle {
+            font-size: 40px;
+            line-height: 52px;
+        }
+        &__text {
+            margin-top: 30px;
+            font-size: 32px;
+            line-height: 41px;
+        }
+
+        &__img {
+            position: relative;
+            margin-top: 110px;
+            width: 45%;
+        }
+        .wrapper__img {
+            width: 100%;
+            position: absolute;
+            left: 7%;
+            background-image: url(../../assets/imgs/screen_desktop4k.png); 
+        }
+    }
+}
+@media (min-resolution: 2dppx) and (min-width: $ultra) {
+    .whyRecyclex {
+        .wrapper__img {
+            background-image: url(../../assets/imgs/screen_desktop4k_retina.png);
+        }
+    }
+}
 
 @media (max-width: $tablet)  {
     .whyRecyclex {
