--- a/src/components/SolveProblems/SolveProblems.scss
+++ b/src/components/SolveProblems/SolveProblems.scss
@@ -12,7 +12,6 @@
         flex-direction: column;
         align-items: center;   
     }
-
     &__items {
         margin-top: 100px;
         display: flex;
@@ -21,7 +20,6 @@
     }
     &__item {
         width: 32%;
-        border-radius: 28px;
         background: #F7F7F7;  
         border-radius:30px;               
     } 
@@ -31,10 +29,10 @@
         padding-left: 10%;
         padding-right: 10%; 
         padding-top: 40px;
-        padding-bottom: 40px;
+        padding-bottom: 20px;
     }
     &__list-title {
-        min-height: 85px;
+        min-height: 82px;
         font-size: 32px;
         line-height: 41px;
         font-weight: 700;
@@ -42,15 +40,46 @@
     &__list-items {
         margin-top: 20px;
     }
-    &__list-item{
-        padding-bottom: 30px;
+    &__list-item {
+        padding-bottom: 20px;
         font-size: 20px;
         line-height: 26px;       
     }
-    .problems__col1, 
-    .problems__col2 {
-        p:last-child{
-            padding-bottom: 0;
+}
+@media (min-width: $ultra) {
+    .problems {
+        margin-top: 300px;
+        &__inner {
+            display: flex;
+            flex-direction: column;
+            align-items: center;   
+        }
+    
+        &__items {
+            margin-top: 150px;
+            column-gap: 1%;  
+        }
+        &__item {
+            width: calc(100%/3 - 1% * 2/3); 
+            border-radius: 60px;               
+        } 
+        &__wrapper {
+            padding-left: 5%;
+            padding-right: 5%; 
+            padding-top: 65px;
+        }
+        &__list-title {
+            min-height: 128px;
+            font-size: 50px;
+            line-height: 64px;
+        }
+        &__list-items {
+            margin-top: 40px;
+        }
+        &__list-item{
+            padding-bottom: 44px;
+            font-size: 35px;
+            line-height: 45px;       
         }
     }
 }
@@ -68,7 +97,7 @@
             line-height: 36px;
         }
         &__list-items {
-            margin-top: 10px;
+            margin-top: 20px;
         }
         &__list-item {
             padding-bottom: 20px;
@@ -83,9 +112,12 @@
         &__items {
             margin-top: 105px;
         }
+        &__item {  
+            border-radius: 20px;               
+        }
         &__wrapper {
-            padding-top: 15px;
-            padding-bottom: 15px;
+            padding-top: 20px;
+            padding-bottom: 0;
         }
         &__list-title {
             min-height: 40px;
@@ -107,6 +139,7 @@
         &__wrapper {
             padding-left: 4%;
             padding-right: 4%;
+            padding-bottom: 0;
         }
     }
 }
@@ -129,10 +162,9 @@
         &__wrapper{ 
             min-height: 30px;
             padding-top: 0;
-            padding-bottom: 0;
         }
         &__item {
-            padding-bottom: 35px;   
+            padding-bottom: 20px;   
         } 
         &__list-title {
             min-height: 15px;
@@ -146,17 +178,17 @@
         &__list-items {
             display: flex;
             justify-content: space-between;
-            margin-top: 12px;  
+            margin-top: 20px;  
             font-size: 12px;
             line-height: 16px;
         }
-        .problems__col1 {
-            width: 46%;
-            
-        }
+        .problems__col1, 
         .problems__col2 {
-            width: 46%;
-        }  
+        width: 46%;
+            p:last-child{
+                padding-bottom: 0;
+            }
+        } 
     }    
 }
 
@@ -174,11 +206,12 @@
             min-height: 15px;
             font-size: 13px;
             line-height: 16px;
+            padding-bottom: 12px;
         }
         &__list-item {
             font-size: 10px;
             line-height: 12px;
-            padding-bottom: 12px;
+            padding-bottom: 10px;
         }
     }  
 }
