--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -25,6 +25,10 @@
     gap: 50px;
 }
 
+.footer__requisites {
+    max-width: 405px;
+}
+
 .footer__links {
     display: flex;
     flex-direction: column;
@@ -86,19 +90,31 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    gap: 30px;
 }
+
+.footer__email {
+    margin-bottom: 30px;
+}
+
+.footer__emailLink{
+    color: $textColor;
+}
+
+#dark .footer__emailLink {
+    color: $textColor_dark;
+}
+
 
 .footer__social {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 40px;
 }
 
 .footer__icon {
     width: 40px;
     fill: $textColor;
+    margin-left: 40px;
 }
 
 #dark .footer__icon {
@@ -127,16 +143,13 @@
         font-size: 10px;
     }
 
-    .footer__contacts {
-        gap: 16px;
+    .footer__email {
+        margin-bottom: 16px;
     }
 
-    .footer__social {
-        gap: 28px;
-    }
-    
     .footer__icon {
         width: 28px;
+        margin-left: 28px;
     } 
 }
 
@@ -162,7 +175,6 @@
     .footer__contacts {
         grid-area: contacts;
         align-self: flex-end;
-        gap: 0;
     }
 
     .footer__requisitesAndRights {
@@ -190,12 +202,9 @@
         display: none;
     }
     
-    .footer__social {
-        gap: 23px;
-    }
-    
     .footer__icon {
         width: 23px;
+        margin-left: 23px;
     } 
 
 @media (max-width: 330px)  {
@@ -225,5 +234,30 @@
             line-height: 1.3;
         }
     }
+}
+
+@media (min-width: $ultra)  {
+    .footer__inner {
+        font-size: 23px;
+        line-height: 53px;
+    }
+
+    .footer__requisites {
+        max-width: 512px;
+    }
+
+    .footer__manager {
+        font-size: 23px;
+        line-height: 53px;
+    }
+
+    .footer__email {
+        margin-bottom: 68px;
+    }
+
+    .footer__icon {
+        width: 67px;
+        margin-left: 91px;
+    } 
 }
 
