--- a/src/components/SwitchTheme/SwitchTheme.scss
+++ b/src/components/SwitchTheme/SwitchTheme.scss
@@ -82,23 +82,25 @@
     }
 }
 
+@media (min-width: $ultra)  {
+    .switch__label {
+        font-size: 14px;
+    }
 
-// @media (max-width: $smallMobile)  {
-//     .react-switch-bg {
-//         width: 30px !important;
-//         height: 20px !important;
-//         border-radius: 15px !important;
-//     }
+    .react-switch-bg {
+        width: 90px !important;
+        height: 50px !important;
+        border-radius: 27px !important;
+    }
 
-//     .react-switch-handle {
-//         width: 13px !important;
-//         height: 13px !important;
-//         top: 3.3px !important;
-//         left: 3px !important;
-//         transform: translateX(0px) !important;
-//     }
-
-//     #dark .react-switch-handle {
-//         transform: translateX(11px)  !important;
-//     }
-// }
+    .react-switch-handle {
+        width: 44px !important;
+        height: 44px !important;
+        top: 3px !important;
+        transform: translateX(-2px) !important;
+    }
+    
+    #dark .react-switch-handle {
+        transform: translateX(37px)  !important;
+    }
+}
