--- a/src/components/HelpInput/HelpInput.scss
+++ b/src/components/HelpInput/HelpInput.scss
@@ -30,16 +30,18 @@
     }
 }
 
+#dark .help__input {
+    background-color: #1A1A1A;
+    border: 1px solid $bgColor;
+    color: $bgColor;
+}
+
 .help__input_error {
     border: 3px solid $accentColor;
 }
 
 #dark .help__input_error {
-    border-width: 4px;
-}
-
-#dark .help__input {
-    background-color: #FFFFFF;
+    border: 3px solid $accentColor;
 }
 
 .help__error {
@@ -53,6 +55,10 @@
 .help__row textarea {
     height: 134px;
     resize: none;
+}
+
+.help__row:last-child {
+    margin-bottom: 10px;
 }
 
 @media (max-width: $tablet)  {
@@ -84,6 +90,10 @@
     
     .help__row textarea {
         height: 100px;
+    }
+
+    .help__row:last-child {
+        margin-bottom: 5px;
     }
 }
 
@@ -136,7 +146,10 @@
     
     .help__row textarea {
         max-height: 85px;
-        margin-bottom: 10px;
+    }
+
+    .help__row:last-child {
+        margin-bottom: 3px;
     }
 }
 
@@ -165,5 +178,40 @@
     .help__row textarea {
         max-height: 70px;
         margin-bottom: 13px;
+    }
+}
+
+@media screen and (min-width: $ultra) {
+    .help__label {
+        font-size: 28px;
+    }
+    
+    .help__input {
+        width: 520px;
+        height: 50px;
+        padding: 15px 15px;
+        font-size: 23px;
+        line-height: 20px;
+        border: 1px solid $textColor;
+        background-color: $bgColor;
+        border-radius: 4px;
+    }
+
+    .help__input_error {
+        border: 4px solid $accentColor;
+    }
+    
+    #dark .help__input_error {
+        border: 4px solid $accentColor;
+    }
+    
+    .help__error {
+        top: -25px;
+        font-size: 19px;
+        line-height: 19px;
+    }
+
+    .help__row:last-child {
+        margin-bottom: 5px;
     }
 }
