--- a/src/components/HelpModal/HelpModal.scss
+++ b/src/components/HelpModal/HelpModal.scss
@@ -160,7 +160,7 @@
 
     .help__header {
         position: relative;
-        margin-bottom: 0;
+        margin-bottom: 15px;
     }
 
     .help__close {
@@ -218,4 +218,49 @@
         width: 200px;
         margin-bottom: 9px;
     }
+}
+
+@media screen and (min-width: $ultra) {
+    .help__content {
+        padding: 62px 70px 52px 109px;
+        width: 1088px;
+        max-height: 1033px;
+    }
+
+    .help__header {
+        margin-bottom: 101px;
+    }
+
+    .help__logo {
+        width: 400px;
+    }
+
+    .help__cross {
+        width: 25px;
+        height: 25px;
+    }
+
+    .help__rows {
+        gap: 40px;
+    }
+
+    .help__alert {
+        font-size: 16px;
+        line-height: 16px;
+        margin-bottom: 28px;
+    }
+    
+    .help__alertIcon {
+        width: 17px;
+        height: 17px;
+    }
+    
+    .help__agreement {
+        text-decoration: underline;
+    }
+    
+    #dark .help__agreement {
+        color: $textColor_dark;
+    }
+    
 }
