--- a/src/styles/_btn.scss
+++ b/src/styles/_btn.scss
@@ -49,6 +49,13 @@
         font-size: 45px;
         line-height: 45px;
     }
+
+    .btn_modal {
+        width: 320px;
+        padding: 27px 0;
+        font-size: 24px;
+        line-height: 24px;
+    }
 }
 @media screen and (max-width: $tablet) {
     .btn {
