--- a/src/components/FormAnswer/FormAnswer.scss
+++ b/src/components/FormAnswer/FormAnswer.scss
@@ -1,28 +1,44 @@
 @import "../../styles/vars";
 
 .formAnswer {
-    width: 685px;
-    border-radius: 30px;
-    font-size: 20px;
-    background-color: #EBEBEB;
+  width: 620px;
+  border-radius: 30px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 16px;
+  background-color: #ebebeb;
 }
 
 #dark .formAnswer {
-    background-color:  #FFFFFF;
-    color: $bgColor_dark;
+  background-color: #1A1A1A;
+  color: $textColor_dark;
 }
 
-@media (max-width: 730px)  {
-    .personalData {
-        width: 100%;
-        border-radius: 10px;
-      }
+@media (max-width: $tablet) {
+  .formAnswer {
+    width: 580px;
+    font-size: 20px;
+    line-height: 18px;
+  }
+
+  .personalData {
+    width: 100%;
+    border-radius: 10px;
+  }
 }
 
+@media (max-width: $mobile) {
+  .formAnswer {
+    width: 100%;
+    border-radius: 10px;
+  }
+}
 
-@media (max-width: $mobile)  {
-    .formAnswer {
-        width: 100%;
-        border-radius: 10px;
-    }
+@media (min-width: $ultra) {
+  .formAnswer {
+    width: 1018px;
+    border-radius: 50px;
+    font-size: 24px;
+    line-height: 21px;
+  }
 }
