--- a/src/pages/FormPage/FormPage.scss
+++ b/src/pages/FormPage/FormPage.scss
@@ -1,100 +1,220 @@
 @import "../../styles/vars";
 
 .form {
-    margin-top: 96px;
-    margin-bottom: 115px;
+  margin-top: 96px;
+  margin-bottom: 115px;
 }
 
 .form__header {
-    margin-bottom: 55px;
-    text-align: start;
+  margin-bottom: 55px;
+  text-align: start;
 }
 
 .form__answer {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .form__checkbox {
-    padding: 60px 100px 60px 100px;
+  padding: 51px 54px 40px 54px;
 }
 
 .form__radio {
-    padding: 46px 81px 57px 81px;
+  padding: 46px 81px 57px 81px;
 }
 
 .form__personalData {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 45px 53px 35px 53px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 45px 53px 35px 53px;
 }
 
-@media (max-width: $tablet)  {   
-    .form {
-        margin-top: 100px;
-        margin-bottom: 110px;
-    }
-
-    .form__header {
-        margin-bottom: 35px;
-    }
-
-    .form__checkbox {
-        padding: 59px 52px 60px 52px;
-    }
-
-    .form__radio {
-        padding: 63px 50px 36px 50px;
-    }
-
-    .form__personalData {
-        padding: 45px 20px 35px 20px;
-        }  
+.form__checkboxInner {
+  position: relative;
 }
 
-@media (max-width: $mobile)  {
-    .form {
-        margin-top: 35px;
-        margin-bottom: 50px;
-    }
+.form__checkboxError {
+  position: absolute;
+  display: none;
+  align-items: center;
+  top: -33px;
+  left: 0;
+}
 
-    .form__header {
-        margin-bottom: 30px;
-    }
+.form__checkboxError_shown {
+  display: flex;
+}
 
-    .form__checkbox {
-        padding: 29px 27px 30px 27px;
-    }
+.form__checkboxErrorIcon {
+  width: 18px;
+  margin-right: 13px;
+}
 
-    .form__radio {
-        padding: 28px 25px;
-    }
+.form__checkboxErrorText {
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 14px;
+  color: $accentColor;
+}
 
+@media (max-width: $tablet) {
+  .form {
+    margin-bottom: 110px;
+  }
 
-.form__personalData {
+  .form__header {
+    margin-bottom: 35px;
+  }
+
+  .form__checkbox {
+    padding: 50px 15px 60px 52px;
+  }
+
+  .form__checkboxError {
+    top: -37px;
+  }
+
+  .form__checkboxErrorIcon {
+    width: 21px;
+  }
+
+  .form__checkboxErrorText {
+    font-size: 16px;
+  }
+
+  .form__radio {
+    padding: 63px 50px 36px 50px;
+  }
+
+  .form__personalData {
+    padding: 45px 20px 35px 20px;
+  }
+}
+
+@media (max-width: $mobile) {
+  .form {
+    margin-top: 30px;
+    margin-bottom: 50px;
+  }
+
+  .form__header {
+    margin-bottom: 30px;
+  }
+
+  .form__checkbox {
+    padding: 26px 30px 25px 30px;
+  }
+
+  .form__checkboxError {
+    top: -20px;
+  }
+
+  .form__checkboxErrorIcon {
+    width: 11px;
+    margin-right: 4px;
+  }
+
+  .form__checkboxErrorText {
+    font-size: 10px;
+    line-height: 9px;
+  }
+
+  .form__radio {
+    padding: 28px 25px;
+  }
+
+  .form__personalData {
     padding: 20px 22px;
-    }
-    
+  }
+}
+
+@media (max-width: $smallMobile) {
+  .form__checkboxError {
+    top: -15px;
+  }
+
+  .form__checkboxErrorIcon {
+    width: 9px;
+    // margin-right: 2px;
+  }
+
+  .form__checkboxErrorText {
+    font-size: 6px;
+    line-height: 9px;
+  }
+}
+
+@media (min-width: $ultra) {
+  .form {
+    margin-top: 173px;
+    margin-bottom: 300px;
+  }
+
+  .form__header {
+    font-size: 70px;
+    line-height: 90px;
+    margin-bottom: 129px;
+  }
+
+  .form__checkbox {
+    padding: 150px 30px 143px 150px;
+  }
+
+  .form__checkboxError {
+    top: -20px;
+  }
+
+  .form__checkboxErrorIcon {
+    width: 11px;
+    margin-right: 4px;
+  }
+
+  .form__checkboxErrorText {
+    font-size: 10px;
+    line-height: 9px;
+  }
+
+  .form__radio {
+    padding: 28px 25px;
+  }
+
+  .form__personalData {
+    padding: 20px 22px;
+  }
+
+  .form__checkboxError {
+    top: -84px;
+  }
+
+  .form__checkboxErrorIcon {
+    width: 24px;
+    margin-right: 10px;
+  }
+
+  .form__checkboxErrorText {
+    font-size: 22px;
+    line-height: 20px;
+  }
 }
 
 // кастомные стили анимации
 
 .transition-answer-enter {
-    opacity: 0;
+  opacity: 0;
 }
 
 .transition-answer-enter-active {
-    opacity: 1;
-    transition: opacity 200ms;
+  opacity: 1;
+  transition: opacity 200ms;
 }
 
 .transition-question-enter {
-    opacity: 0;
+  opacity: 0;
 }
 
 .transition-question-enter-active {
-    opacity: 1;
-    transition: opacity 200ms;
-    transition-delay: 200ms;
+  opacity: 1;
+  transition: opacity 200ms;
+  transition-delay: 200ms;
 }
