--- a/src/components/SolveProblems/SolveProblems.scss
+++ b/src/components/SolveProblems/SolveProblems.scss
@@ -16,20 +16,22 @@
         margin-top: 100px;
         display: flex;
         justify-content: space-between; 
-        width: 100%;    
+        width: 100%; 
+        /* column-gap: 22px;  */ 
     }
     &__item {
-        width: 32%;
+        /* width: 32%; */
+        width: calc(100%/3 - 22px * 2/3); 
         background: #F7F7F7;  
-        border-radius:30px;               
+        border-radius: 30px;               
     } 
     &__wrapper {
         display: flex;
         flex-direction: column;
-        padding-left: 10%;
-        padding-right: 10%; 
+        padding-left: 33px;
+        padding-right: 33px; 
         padding-top: 40px;
-        padding-bottom: 20px;
+        padding-bottom: 40px;
     }
     &__list-title {
         min-height: 82px;
@@ -43,7 +45,7 @@
     &__list-item {
         padding-bottom: 20px;
         font-size: 20px;
-        line-height: 26px;       
+        line-height: 26px;      
     }
 }
 @media (min-width: $ultra) {
@@ -57,16 +59,17 @@
     
         &__items {
             margin-top: 150px;
-            column-gap: 1%;  
+            /* column-gap: 30px;   */
         }
         &__item {
-            width: calc(100%/3 - 1% * 2/3); 
+            width: calc(100%/3 - 30px * 2/3); 
             border-radius: 60px;               
         } 
         &__wrapper {
-            padding-left: 5%;
-            padding-right: 5%; 
-            padding-top: 65px;
+            padding-left: 55px;
+            padding-right: 25px; 
+            padding-top: 44px;
+            padding-bottom: 0;
         }
         &__list-title {
             min-height: 128px;
@@ -74,7 +77,7 @@
             line-height: 64px;
         }
         &__list-items {
-            margin-top: 40px;
+            margin-top: 50px;
         }
         &__list-item{
             padding-bottom: 44px;
@@ -83,27 +86,24 @@
         }
     }
 }
-@media (max-width: 1280px) {
+@media (max-width: $desktop) {
     .problems {
-        &__item{
+       /*  &__item{
             min-height: 260px;
         }
         &__wrapper {
             min-height: 260px;
-        }
+        } */
         &__list-title {
-            min-height: 75px;
-            font-size: 26px;
-            line-height: 36px;
-        }
-        &__list-items {
-            margin-top: 20px;
+            min-height: 60px; 
+            font-size: 23px;
+            line-height: 33px; 
         }
         &__list-item {
-            padding-bottom: 20px;
-            font-size: 15px; 
-            line-height: 20px;
-        }
+            padding-bottom: 15px;
+            font-size: 14px; 
+            line-height: 18px;
+        }  
     }
 }
 @media (max-width: $tablet)  {
@@ -111,12 +111,16 @@
         margin-top: 180px;
         &__items {
             margin-top: 105px;
+            /* column-gap: 20px; */
         }
         &__item {  
+            width: calc(100%/3 - 20px * 2/3); 
             border-radius: 20px;               
         }
         &__wrapper {
             padding-top: 20px;
+            padding-left: 20px;
+            padding-right: 10px; 
             padding-bottom: 0;
         }
         &__list-title {
@@ -137,8 +141,8 @@
             padding-bottom: 10px;
         }
         &__wrapper {
-            padding-left: 4%;
-            padding-right: 4%;
+            padding-left: 5px;
+            padding-right: 5px;
             padding-bottom: 0;
         }
     }
