--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -12,7 +12,8 @@
 
 .checkbox__label {
   position: relative;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 20fr;
   user-select: none;
 }
 
@@ -62,17 +63,18 @@
     width: 19px;
     height: 19px;
     margin-right: 9px;
-    margin-top: -2px;
+    margin-top: 1px;
   }
 
   .checkbox__mark {
     background-image: url("../../assets/imgs/check_tablet.svg");
-    top: -4px;
+    top: -1px;
     left: -0.2px;
   }
 
   .checkbox__text {
     line-height: 20px;
+        word-break: break-word;
   }
 }
 
@@ -82,9 +84,6 @@
   }
 
   .checkbox__label {
-    position: relative;
-    display: flex;
-    user-select: none;
     font-size: 12px;
     line-height: 11px;
   }
@@ -94,12 +93,12 @@
     height: 9px;
     border: 1px solid $textColor;
     margin-right: 11px;
-    margin-top: 1px;
+    margin-top: 5px;
   }
 
   .checkbox__mark {
     background-image: url("../../assets/imgs/check_mobile.svg");
-    top: 1px;
+    top: 5px;
     left: -0.2px;
   }
 }
