--- a/src/components/FormMessage/FormMessage.scss
+++ b/src/components/FormMessage/FormMessage.scss
@@ -110,10 +110,14 @@
     .formMessage {
         display: flex;
         margin-bottom: 50px;
+
+        // &:last-child {
+        //     margin-bottom: 206px;
+        // }
     }
     
     .formMessage__border {
-        max-width: 616px;
+        max-width: 818px;
         padding: 44px 40px;
         border-radius: 35px;
     }
