--- a/src/components/PersonalDataInputs/PersonalDataInputs.scss
+++ b/src/components/PersonalDataInputs/PersonalDataInputs.scss
@@ -1,25 +1,23 @@
 @import "../../styles/vars";
 
 .personalData {
-  width: 579px;
+  width: 514px;
   display: flex;
   flex-direction: column;
-  gap: 10px;
 }
 
 .personalData__firstAndMiddle {
     display: grid;
-    grid-template-columns: 1.5fr 2fr;
-    gap: 13px;
+    grid-template-columns: 2fr 2fr;
 }
 
 .personalData__input {
     width: 100%;
-    height: 50px;
-    padding: 12px 30px;
+    height: 37px;
+    padding: 12px 15px;
     font-size: 20px;
-    border: 4px solid $textColor;
-    border-radius: 10px;
+    border: 2px solid $textColor;
+    border-radius: 5px;
     color: $textColor;
 
     &:focus {
@@ -32,14 +30,92 @@
     }
 }
 
+#dark .personalData__input {
+    background-color: #1A1A1A;
+    border-color: $textColor_dark;
+    color: $textColor_dark;
+}
+
+
+.personalData__input_error {
+    border-color: $accentColor;
+}
+
+#dark .personalData__input_error {
+    border-color: $accentColor;
+}
+
+.personalData_inputWrapper {
+    position: relative;
+
+    &:not(:last-child) {
+        margin-bottom: 35px;
+    }
+
+    &:nth-child(2) {
+        margin-left: 18px;
+    }
+}
+
+.personalData__label {
+    position: absolute;
+    font-size: 17px;
+    line-height: 21px;
+    font-weight: 700;
+    top: -21px;
+    left: 6px;
+}
+
+.personalData__error {
+    position: absolute;
+    font-size: 13px;
+    line-height: 16px;
+    font-weight: 400;
+    color: $accentColor;
+    bottom: -16px;
+    right: 0;
+}
+
 @media (max-width: $tablet)  {
     .personalData {
-        width: 540px;
+        width: 580px;
       }
 
       .personalData__firstAndMiddle {
-        grid-template-columns: 1.3fr 2fr;
-        gap: 20px;
+        grid-template-columns: 1.8fr 2fr;
+    }
+    
+      .personalData__input {
+          height: 50px;
+          padding: 12px 20px;
+          font-size: 20px;
+          line-height: 25px;
+          border-radius: 10px;
+      }
+      
+      .personalData_inputWrapper {
+      
+          &:not(:last-child) {
+              margin-bottom: 46px;
+          }
+      
+          &:nth-child(2) {
+              margin-left: 20px;
+          }
+      }
+      
+      .personalData__label {
+        font-size: 20px;
+        line-height: 25px;
+        top: -26px;
+        left: 10px;
+    }
+    
+    .personalData__error {
+        font-size: 15px;
+        line-height: 19px;
+        bottom: -20px;
+        right: 0;
     }
 }
 
@@ -49,19 +125,134 @@
       }
 }
 
-@media (max-width: $mobile)  {
-    .personalData {
-        width: 100%;
-      }
-
+@media (max-width: $smallTablet)  {
     .personalData__firstAndMiddle {
-        gap: 10px;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 46px;
     }
+    
+    //   .personalData__input {
+    //       height: 50px;
+    //       padding: 12px 20px;
+    //       font-size: 20px;
+    //       line-height: 25px;
+    //       border-radius: 10px;
+    //   }
+      
+      .personalData_inputWrapper {
+      
+          &:not(:last-child) {
+              margin-bottom: 46px;
+          }
+      
+          &:nth-child(2) {
+              margin-left: 0;
+          }
+      }
+      
+    //   .personalData__label {
+    //     font-size: 20px;
+    //     line-height: 25px;
+    //     top: -26px;
+    //     left: 10px;
+    // }
+    
+    .personalData__error {
+        font-size: 12px;
+        // line-height: 19px;
+        // bottom: -20px;
+        // right: 0;
+    }
+}
+
+@media (max-width: $mobile)  {
+    .personalData__firstAndMiddle {
+        margin-bottom: 20px;
+    }
+    
       .personalData__input {
-        height: 30px;
-        padding: 11px 15px;
+          height: 25px;
+          padding: 5px 6px;
+          font-size: 12px;
+          line-height: 15px;
+          border-radius: 5px;
+          border-width: 1px;
+      }
+      
+      .personalData_inputWrapper {
+      
+          &:not(:last-child) {
+              margin-bottom: 20px;
+          }
+      }
+      
+      .personalData__label {
         font-size: 10px;
-        border: 1px solid $textColor;
-        border-radius: 5px;
+        line-height: 10px;
+        top: -12px;
+        left: 5px;
     }
+    
+    .personalData__error {
+        font-size: 8px;
+        line-height: 10px;
+        bottom: -10px;
+    }
+}
+
+@media (max-width: $smallMobile)  {
+    .personalData__error {
+        font-size: 6px;
+    }
+}
+
+@media (min-width: $ultra)  {
+    
+.personalData {
+    width: 1030px;
+  }
+
+  .personalData__input {
+      height: 70px;
+    //   padding: 12px 30px;
+      font-size: 27px;
+      border-width: 4px;
+      border-radius: 5px;
+
+      &_error {
+        border-width: 5px;
+      }
+  }
+
+.personalData__firstAndMiddle {
+    grid-template-columns: 1.6fr 2fr;
+}
+
+  
+  .personalData_inputWrapper {
+  
+      &:not(:last-child) {
+          margin-bottom: 60px;
+      }
+  
+      &:nth-child(2) {
+          margin-left: 94px;
+      }
+  }
+  
+  .personalData__label {
+      font-size: 24px;
+      line-height: 30px;
+      font-weight: 400;
+      top: -33px;
+      left: 20px;
+  }
+  
+  .personalData__error {
+      font-size: 18px;
+      line-height: 23px;
+      bottom: -26px;
+  }
+  
 }
