--- a/src/components/RadioButton/RadioButton.scss
+++ b/src/components/RadioButton/RadioButton.scss
@@ -13,30 +13,36 @@
 .radio__label {
     position: relative;
     display: flex;
+    align-items: center;
     user-select: none;
-    font-size: 27px;
-    margin-left: 20px;
+    font-size: 16px;
+    line-height: 14px;
+    // margin-left: 20px;
 }
 
 .radio__label::before {
     content: '';
     box-sizing: border-box;
     display: inline-block;
-    min-width: 40px;
-    height: 40px;
-    margin-right: 20px;
+    min-width: 28px;
+    height: 28px;
+    margin-right: 22px;
     border: 3px solid $textColor;
     border-radius: 20px;
+}
+
+#dark .radio__label::before{
+    border-color: $textColor_dark;
 }
 
 .radio__mark {
     display: none;
     position: absolute;
     box-sizing: border-box;
-    top: 10px;
-    left: 10px;
-    min-width: 20px;
-    height: 20px;
+    top: 7px;
+    left: 7px;
+    min-width: 14px;
+    height: 14px;
     border: 3px solid $accentColor;
     background-color: $accentColor;
     border-radius: 20px;
@@ -53,17 +59,17 @@
     
     .radio__label {
         font-size: 20px;
-        margin-left: 10px;
+        // margin-left: 10px;
     } 
 
     .radio__label::before {
         min-width: 20px;
-        height: 20px;
-        margin-right: 10px;
+        height: 18px;
+        margin-right: 15px;
     }
     
     .radio__mark {
-        top: 4.9px;
+        top: 3.9px;
         left: 4.9px;
         min-width: 10px;
         height: 10px;
@@ -77,7 +83,6 @@
     
     .radio__label {
         font-size: 10px;
-        margin-left: 10px;
     } 
 
     .radio__label::before {
@@ -88,9 +93,55 @@
     }
     
     .radio__mark {
-        top: 2px;
+        top: 3px;
         left: 2px;
         min-width: 8px;
         height: 8px;
     }
+}
+
+@media (min-width: $ultra)  {
+    .radio:not(:last-child) {
+        margin-bottom: 67px;
+    }
+    
+    // .radio__input {
+    //     position: absolute;
+    //     z-index: -1;
+    //     opacity: 0;
+    // }
+    
+    .radio__label {
+        font-size: 35px;
+        margin-left: 31px;
+    }
+    
+    .radio__label::before {
+        // content: '';
+        // box-sizing: border-box;
+        // display: inline-block;
+        min-width: 50px;
+        height: 50px;
+        margin-right: 55px;
+        // border: 3px solid $textColor;
+        border-radius: 50px;
+    }
+    
+    .radio__mark {
+        // display: none;
+        // position: absolute;
+        // box-sizing: border-box;
+        top: 9px;
+        left: 10px;
+        min-width: 30px;
+        height: 30px;
+        // border: 3px solid $accentColor;
+        // background-color: $accentColor;
+        border-radius: 50px;
+    }
+    
+    // .radio__input:checked+label .radio__mark {
+    //     display: block;
+    // }
+    
 }
